<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:screenOrientation="landscape"
    android:background="#ff03a5c9"
    android:orientation="vertical">

    <!--android:background="#fffad701"-->

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:text="How is this presentation going?"
        android:background="@drawable/text_view_border"
        android:textSize="32sp"
        android:textColor="#ff000000"
        android:textStyle="bold"
        android:padding="10dp"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.example.android.engagementandroid.layout.SquareLayout
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/happy1"
            android:onClick="sendReply"
            android:adjustViewBounds="true"
            android:contentDescription="@string/happy1"
            android:scaleType="centerInside"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        </com.example.android.engagementandroid.layout.SquareLayout>

        <com.example.android.engagementandroid.layout.SquareLayout
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageButton2"
            android:background="@drawable/happy2"
            android:onClick="sendReply"
            android:adjustViewBounds="true"
            android:contentDescription="@string/happy2"
            android:scaleType="centerInside"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        </com.example.android.engagementandroid.layout.SquareLayout>

        <com.example.android.engagementandroid.layout.SquareLayout
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageButton3"
            android:background="@drawable/happy3"
            android:onClick="sendReply"
            android:adjustViewBounds="true"
            android:contentDescription="@string/happy3"
            android:scaleType="centerInside"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        </com.example.android.engagementandroid.layout.SquareLayout>

        <com.example.android.engagementandroid.layout.SquareLayout
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageButton4"
            android:background="@drawable/happy4"
            android:onClick="sendReply"
            android:adjustViewBounds="true"
            android:contentDescription="@string/happy4"
            android:scaleType="centerInside"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        </com.example.android.engagementandroid.layout.SquareLayout>

        <com.example.android.engagementandroid.layout.SquareLayout
            android:layout_height="fill_parent"
            android:layout_width="0dip"
            android:layout_weight="1"
            android:layout_gravity="center">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageButton5"
            android:background="@drawable/happy5"
            android:onClick="sendReply"
            android:adjustViewBounds="true"
            android:contentDescription="@string/happy5"
            android:scaleType="fitXY"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        </com.example.android.engagementandroid.layout.SquareLayout>
    </LinearLayout>
</LinearLayout>
